--- a/war/GithubTest.html
+++ b/war/GithubTest.html
@@ -17,7 +17,7 @@
     <!-- Any title is fine                         -->
     <!--                                           -->
     <title>Web Application Starter Project</title>
-    
+    <!-- test -->
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
