--- a/war/GithubTest.html
+++ b/war/GithubTest.html
@@ -18,6 +18,7 @@
     <!--                                           -->
     <title>Web Application Starter Project</title>
     <!-- test -->
+    <!--  superior test -->
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
