--- a/war/GithubTest.html
+++ b/war/GithubTest.html
@@ -19,6 +19,7 @@
     <title>Web Application Starter Project</title>
     <!-- test -->
     <!--  superior test -->
+    <!-- Another test -->
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
