second commit test

--- a/war/GithubTest.html
+++ b/war/GithubTest.html
@@ -20,6 +20,7 @@
     <!-- test -->
     <!--  superior test -->
     <!-- Another test -->
+     <!-- One test to test them all -->
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
